# Rust-Rocket-Example

./: .env  Cargo.toml  README.md  Rocket.toml
src/: auth.rs  db.rs  main.rs
src/routes/user/: login.rs
src/services/auth/: auth_trait.rs  jwt.rs  mod.rs
