[package]
name = "rocket"
version = "0.1.0"
authors = ["Jcampos <jcamposforner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
r2d2 = "0.8"
r2d2_postgres = "0.14.0"
dotenv = "0.14.1"
serde = "1.0.80"
serde_derive  = "1.0.80"
serde_json = "1.0.32"

